alignment correcting

--- a/css/css.css
+++ b/css/css.css
@@ -260,16 +260,21 @@ nav
 .map
 {
 	width: 100%;
-	height: 400px;
-	background-color: #88f;
+	/*background-color: #88f;*/
 	float: left;
+}
+.map iframe
+{
+	width: 100%;
+	height: 500px;
+	frameborder: 0;
 }
 .message
 {
 	width: 30%;
 	position: absolute;
 	top: 145px;
-	left: 45%;
+	left: 65%;
 	margin: 0 auto;
 	transition: all 0.4s ease;
 	background-color: #fff;
